- Improved image loading time - Redone clock mechanisim

--- a/newtab.html
+++ b/newtab.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" >
     <title>Custom New Tab</title>
-    <link link rel="stylesheet" href="style.css"></link>
-    <script src="script.js"></script>
+    <link link="" rel="stylesheet" href="style.css">
+    <script src="script.js" defer=""></script>
   </head>
   <body>
-    <ul id="bookmark-list"></>
+    <div id="content">
+      <div id="clock"></div>
+      <div id="weather">
+      </div>
+      <ul id="bookmark-list"></ul>
+    </div>
   </body>
 </html>
